--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message84612" onclick="return GoToMessage(84612)">this message</a>
+↪️ Ответ на <a href="#go_to_message84612" onclick="return GoToMessage(84612)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -328,7 +328,7 @@ In reply to <a href="#go_to_message84612" onclick="return GoToMessage(84612)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message84613" onclick="return GoToMessage(84613)">this message</a>
+↪️ Ответ на <a href="#go_to_message84613" onclick="return GoToMessage(84613)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -348,7 +348,7 @@ In reply to <a href="#go_to_message84613" onclick="return GoToMessage(84613)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message84614" onclick="return GoToMessage(84614)">this message</a>
+↪️ Ответ на <a href="#go_to_message84614" onclick="return GoToMessage(84614)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -664,7 +664,7 @@ In reply to <a href="#go_to_message84614" onclick="return GoToMessage(84614)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85113" onclick="return GoToMessage(85113)">this message</a>
+↪️ Ответ на <a href="#go_to_message85113" onclick="return GoToMessage(85113)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -796,7 +796,7 @@ In reply to <a href="#go_to_message85113" onclick="return GoToMessage(85113)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85136" onclick="return GoToMessage(85136)">this message</a>
+↪️ Ответ на <a href="#go_to_message85136" onclick="return GoToMessage(85136)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -832,7 +832,7 @@ In reply to <a href="#go_to_message85136" onclick="return GoToMessage(85136)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85137" onclick="return GoToMessage(85137)">this message</a>
+↪️ Ответ на <a href="#go_to_message85137" onclick="return GoToMessage(85137)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -852,7 +852,7 @@ In reply to <a href="#go_to_message85137" onclick="return GoToMessage(85137)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85138" onclick="return GoToMessage(85138)">this message</a>
+↪️ Ответ на <a href="#go_to_message85138" onclick="return GoToMessage(85138)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -936,7 +936,7 @@ In reply to <a href="#go_to_message85138" onclick="return GoToMessage(85138)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85139" onclick="return GoToMessage(85139)">this message</a>
+↪️ Ответ на <a href="#go_to_message85139" onclick="return GoToMessage(85139)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -956,7 +956,7 @@ In reply to <a href="#go_to_message85139" onclick="return GoToMessage(85139)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85158" onclick="return GoToMessage(85158)">this message</a>
+↪️ Ответ на <a href="#go_to_message85158" onclick="return GoToMessage(85158)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -976,7 +976,7 @@ In reply to <a href="#go_to_message85158" onclick="return GoToMessage(85158)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85139" onclick="return GoToMessage(85139)">this message</a>
+↪️ Ответ на <a href="#go_to_message85139" onclick="return GoToMessage(85139)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -1388,7 +1388,7 @@ In reply to <a href="#go_to_message85139" onclick="return GoToMessage(85139)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85471" onclick="return GoToMessage(85471)">this message</a>
+↪️ Ответ на <a href="#go_to_message85471" onclick="return GoToMessage(85471)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -1664,7 +1664,7 @@ In reply to <a href="#go_to_message85471" onclick="return GoToMessage(85471)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85482" onclick="return GoToMessage(85482)">this message</a>
+↪️ Ответ на <a href="#go_to_message85482" onclick="return GoToMessage(85482)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -1716,7 +1716,7 @@ In reply to <a href="#go_to_message85482" onclick="return GoToMessage(85482)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85489" onclick="return GoToMessage(85489)">this message</a>
+↪️ Ответ на <a href="#go_to_message85489" onclick="return GoToMessage(85489)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -3244,7 +3244,7 @@ Sticker
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85548" onclick="return GoToMessage(85548)">this message</a>
+↪️ Ответ на <a href="#go_to_message85548" onclick="return GoToMessage(85548)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -3968,7 +3968,7 @@ In reply to <a href="#go_to_message85548" onclick="return GoToMessage(85548)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85916" onclick="return GoToMessage(85916)">this message</a>
+↪️ Ответ на <a href="#go_to_message85916" onclick="return GoToMessage(85916)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -4284,7 +4284,7 @@ In reply to <a href="#go_to_message85916" onclick="return GoToMessage(85916)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message85930" onclick="return GoToMessage(85930)">this message</a>
+↪️ Ответ на <a href="#go_to_message85930" onclick="return GoToMessage(85930)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -4464,7 +4464,7 @@ In reply to <a href="#go_to_message85930" onclick="return GoToMessage(85930)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86231" onclick="return GoToMessage(86231)">this message</a>
+↪️ Ответ на <a href="#go_to_message86231" onclick="return GoToMessage(86231)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -4500,7 +4500,7 @@ In reply to <a href="#go_to_message86231" onclick="return GoToMessage(86231)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86231" onclick="return GoToMessage(86231)">this message</a>
+↪️ Ответ на <a href="#go_to_message86231" onclick="return GoToMessage(86231)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -4680,7 +4680,7 @@ In reply to <a href="#go_to_message86231" onclick="return GoToMessage(86231)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86242" onclick="return GoToMessage(86242)">this message</a>
+↪️ Ответ на <a href="#go_to_message86242" onclick="return GoToMessage(86242)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -4700,7 +4700,7 @@ In reply to <a href="#go_to_message86242" onclick="return GoToMessage(86242)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86241" onclick="return GoToMessage(86241)">this message</a>
+↪️ Ответ на <a href="#go_to_message86241" onclick="return GoToMessage(86241)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -4960,7 +4960,7 @@ Sticker
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86248" onclick="return GoToMessage(86248)">this message</a>
+↪️ Ответ на <a href="#go_to_message86248" onclick="return GoToMessage(86248)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -5416,7 +5416,7 @@ Sticker
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86264" onclick="return GoToMessage(86264)">this message</a>
+↪️ Ответ на <a href="#go_to_message86264" onclick="return GoToMessage(86264)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -5532,7 +5532,7 @@ In reply to <a href="#go_to_message86264" onclick="return GoToMessage(86264)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86282" onclick="return GoToMessage(86282)">this message</a>
+↪️ Ответ на <a href="#go_to_message86282" onclick="return GoToMessage(86282)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -5552,7 +5552,7 @@ In reply to <a href="#go_to_message86282" onclick="return GoToMessage(86282)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86281" onclick="return GoToMessage(86281)">this message</a>
+↪️ Ответ на <a href="#go_to_message86281" onclick="return GoToMessage(86281)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -5708,7 +5708,7 @@ In reply to <a href="#go_to_message86281" onclick="return GoToMessage(86281)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86292" onclick="return GoToMessage(86292)">this message</a>
+↪️ Ответ на <a href="#go_to_message86292" onclick="return GoToMessage(86292)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -5744,7 +5744,7 @@ In reply to <a href="#go_to_message86292" onclick="return GoToMessage(86292)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86295" onclick="return GoToMessage(86295)">this message</a>
+↪️ Ответ на <a href="#go_to_message86295" onclick="return GoToMessage(86295)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -6632,7 +6632,7 @@ Sticker
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86389" onclick="return GoToMessage(86389)">this message</a>
+↪️ Ответ на <a href="#go_to_message86389" onclick="return GoToMessage(86389)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -6668,7 +6668,7 @@ In reply to <a href="#go_to_message86389" onclick="return GoToMessage(86389)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86391" onclick="return GoToMessage(86391)">this message</a>
+↪️ Ответ на <a href="#go_to_message86391" onclick="return GoToMessage(86391)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -6832,7 +6832,7 @@ In reply to <a href="#go_to_message86391" onclick="return GoToMessage(86391)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86395" onclick="return GoToMessage(86395)">this message</a>
+↪️ Ответ на <a href="#go_to_message86395" onclick="return GoToMessage(86395)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -6852,7 +6852,7 @@ In reply to <a href="#go_to_message86395" onclick="return GoToMessage(86395)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86401" onclick="return GoToMessage(86401)">this message</a>
+↪️ Ответ на <a href="#go_to_message86401" onclick="return GoToMessage(86401)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -7288,7 +7288,7 @@ In reply to <a href="#go_to_message86401" onclick="return GoToMessage(86401)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86456" onclick="return GoToMessage(86456)">this message</a>
+↪️ Ответ на <a href="#go_to_message86456" onclick="return GoToMessage(86456)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -7500,7 +7500,7 @@ In reply to <a href="#go_to_message86456" onclick="return GoToMessage(86456)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86485" onclick="return GoToMessage(86485)">this message</a>
+↪️ Ответ на <a href="#go_to_message86485" onclick="return GoToMessage(86485)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -7632,7 +7632,7 @@ In reply to <a href="#go_to_message86485" onclick="return GoToMessage(86485)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86514" onclick="return GoToMessage(86514)">this message</a>
+↪️ Ответ на <a href="#go_to_message86514" onclick="return GoToMessage(86514)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -7828,7 +7828,7 @@ In reply to <a href="#go_to_message86514" onclick="return GoToMessage(86514)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86521" onclick="return GoToMessage(86521)">this message</a>
+↪️ Ответ на <a href="#go_to_message86521" onclick="return GoToMessage(86521)">это сообщение</a>
        </div>
 
        <div class="text">
@@ -7848,7 +7848,7 @@ In reply to <a href="#go_to_message86521" onclick="return GoToMessage(86521)">th
        </div>
 
        <div class="reply_to details">
-In reply to <a href="#go_to_message86522" onclick="return GoToMessage(86522)">this message</a>
+↪️ Ответ на <a href="#go_to_message86522" onclick="return GoToMessage(86522)">это сообщение</a>
        </div>
 
        <div class="text">
